# auto-weapon-turret

./: .gitignore  .tm_project2.cache  Makefile.am  configure.ac  configure.ac.bak
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Global.h  Makefile.am  Md5.c  Md5.h  awt  awt.glade  blobtrack.cpp  blobtrack.h  callbacks.c  callbacks.h  frame_grabber.c  frame_grabber.h  gui_model.c  gui_model.h  joy_stick.c  joy_stick.h  main.c  password.c  password.h  run-awt.sh  serial.c  serial.h  translate.c  translate.h
